--- a/src/Components/DropArea/DropArea.css
+++ b/src/Components/DropArea/DropArea.css
@@ -1,5 +1,6 @@
 .centreText {
     text-align: center;
+    min-width: 50%;
   }
   
   h1 {
@@ -10,24 +11,18 @@
     margin-top: 20px;
     margin-left: 5%;
     margin-right: 5%;
-    padding-top: 5px;
-    padding-bottom: 0px;
+    padding-top: 5%;
+    padding-bottom: 5%;
     height: 51vh;
     background-color: #202125;
     border-radius: 20px;
     color: white;
+    width: 100%
   }
   
   .image1 {
     max-width: 100%;
     height: 50vh;
-  }
-  
-  .result {
-    display:flex;
-    justify-content:center;
-    color: white;
-    font-size: 20px;
   }
   
   .dropZoneText {
@@ -37,3 +32,11 @@
     flex-direction: column;
     text-align: center;
   }
+
+.cont {
+    flex: 50%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
