--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,6 +3,9 @@
     display: flex;
     justify-content: center;
     padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #fff3ae;
+    box-shadow: 0px 0px 10px #070707
   }
 .image {
     padding-left: 15px;
@@ -13,5 +16,5 @@
   font-size: 80px;
   margin: auto 0;
   font-weight: bold;
-  color: #eeeeee;
+  color: #070707;
 }
