--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Helvetica, sans-serif;
-  background-color: #323639;
+  background-color: #fff3ae;
+}
+
+.row2 {
+  display: flex;
 }
